# hh-jobs

./: .gitignore  README.md  main.py  pyproject.toml
src/: employers_list.py
src/api/: hh_api.py
src/db_manager/: db_manager.py  utils.py
src/errors/: parsing_error.py
